# WebScraping-TT2UserDetails

./: .gitignore  .replit  LICENSE  README.md  anon.py  app.py  check.py  index.py  main.py  push.bat  pyproject.toml  replit.nix  requirements.txt  server.py  sort.py  start.bat  venv.bat
templates/: index.html
