[tool.poetry]
name = "repl-nix-totemtribe2-userdetails"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_totemtribe2_userdetails"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
pandas = "^2.2.2"
urllib3 = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
